# ai-template

./: README.md  bitbucket-pipelines.yml  cookiecutter.json  create_template.py
docker/: job.Dockerfile
{{ cookiecutter.repo_name }}/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  bitbucket-pipelines.yml  pyproject.toml
{{ cookiecutter.repo_name }}/configs/: dev.yaml  prod.yaml  staging.yaml
{{ cookiecutter.repo_name }}/docker/: api.Dockerfile  compose.yaml  entrypoint.sh  job.Dockerfile  job_entrypoint.sh
{{ cookiecutter.repo_name }}/k8s/base/: api-deployment.yaml  api-service.yaml  job-serviceaccount.yaml  job.yaml
{{ cookiecutter.repo_name }}/model_registry/: README.md
{{ cookiecutter.repo_name }}/notebooks/exploration/: README.md
{{ cookiecutter.repo_name }}/scripts/: migrate_db.py  seed_demo_data.py  update_from_template.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.package_name }}/: __init__.py  __main__.py  run.py  version.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.package_name }}/api/: __init__.py  app.py  middleware.py  models.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.package_name }}/cli/: __init__.py  app.py  commands.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.package_name }}/config/: __init__.py  environment.py  settings.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.package_name }}/core/: __init__.py  errors.py  schemas.py  validation.py
{{ cookiecutter.repo_name }}/tests/e2e/: test_api_flows.py
{{ cookiecutter.repo_name }}/tests/fixtures/: responses.json  samples.json
(+71 files in other folders)
