[project]
name = "{{ cookiecutter.package_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = ["Nedal Altiti <nedal.altiti@live.com>"]
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
pydantic = "^2.0"
typer = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^23.0"
isort = "^5.0"
flake8 = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
